dnl Process this file with autoconf to produce a configure script.
AC_INIT(fl-cow, 0.10)
AM_INIT_AUTOMAKE(fl-cow, 0.10)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_MAKE_SET
AC_GNU_SOURCE
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

dnl Checks for libraries.
AC_SEARCH_LIBS(dlopen, dl)

dnl Checks for header files.
AC_STDC_HEADERS

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_C_VOLATILE
AC_C_CONST
AC_C_BIGENDIAN

dnl Checks for library functions.
AC_CHECK_FUNCS(dladdr open64 memset memcpy getcwd strlen strncmp)


AC_OUTPUT(Makefile fl-cow/Makefile test/Makefile)

